--- a/Website/login.html
+++ b/Website/login.html
@@ -5,24 +5,41 @@
 <title>Login to Teddy Bear Club Nursery</title>
 </head>
 <body>
-<h1>Login to Teddy Bear Club Nursery</h1>
-<h2>Please enter your username and password below:</h2>
-<form name="login">
-	<table>
-		<tr>
-			<td>Username: </td>
-			<td><input type="text" name="username"></td>
-		</tr>
-		<tr>
-			<td>Password: </td>
-			<td><input type="password" name="password"></td>
-		</tr>
-		<tr>
-		<td></td>
-		<td align="right"><input type="submit" value="Login"></td>
-		</tr>
-	</table>
-	<a href="#">Forgot your password?</a>
-</form>
+<div id="wrapper">
+	<div id="header">
+		<div id="logo">
+			<h1><a href="#">Teddy Bear Club Nursery</a></h1>
+		</div>
+	</div>
+	<div id="three-columns">
+		<div id="column1">
+			<p></p>
+			<p></p>
+		</div>
+		<div id="column2">
+			<h2>Login</h2>
+			<form name="login">
+				<table>
+					<tr>
+						<td>Username: </td>
+						<td><input type="text" name="username"></td>
+					</tr>
+					<tr>
+						<td>Password: </td>
+						<td><input type="password" name="password"></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td><input type="submit" value="Login"></td>
+					</tr>
+				</table>
+					<a href="#">Forgot your password?</a>
+			</form>
+		</div>
+		<div id="column3">
+			<p></p>
+		</div>
+	</div>
+</div>
 </body>
 </html>
